--- a/public/Committees.html
+++ b/public/Committees.html
@@ -68,7 +68,7 @@
 						<ul class="nav navbar-nav">
 							<li><a class="smooth" href="#wrapper">Home</a></li>
 							<li><a class="smooth" href="./Links.html">Links</a></li>
-							<li><a class="smooth" href="#projects">Projects</a></li>
+							<li><a class="smooth" href="./index.html#projects">Projects</a></li>
 							<li><a class="smooth" href="team.html">Members</a></li>
 							<li class="sign
 							up"><a href="#projects">View Project</a></li>
@@ -78,14 +78,17 @@
 								  More
 								</a>
 								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown">
-								  <a class="dropdown-item smooth navis" href="#">Committee</a>
+								  <a class="dropdown-item smooth navis" href="./Committees.html">Committee</a>
 								  <div class="dropdown-divider "></div>
 
 								  <a class="dropdown-item navis" href="./Links.html">Links</a>
 								  <div class="dropdown-divider "></div>
 								  <a class="dropdown-item smooth navis" href="./Minutes.html">Minutes</a>
+								  <div class="dropdown-divider "></div>
+
 								  <a class="dropdown-item smooth navis" href="./Meetings.html">Meetings</a>
 								</div>
+
 							  </li>
 						</ul>
 					</div>
