--- a/public/Meetings.html
+++ b/public/Meetings.html
@@ -84,6 +84,8 @@
 								  <a class="dropdown-item navis" href="./Links.html">Links</a>
 								  <div class="dropdown-divider "></div>
 								  <a class="dropdown-item smooth navis" href="./Minutes.html">Minutes</a>
+                                  <div class="dropdown-divider "></div>
+
 								  <a class="dropdown-item smooth navis" href="./Meetings.html">Meetings</a>
 								</div>
 							  </li>
