--- a/public/team.html
+++ b/public/team.html
@@ -67,14 +67,28 @@
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
 							<li><a class="smooth" href="#wrapper">Home</a></li>
-							<li><a class="smooth" href="#features">About</a></li>
+							<li><a class="smooth" href="./Links.html">Links</a></li>
 							<li><a class="smooth" href="#projects">Projects</a></li>
 							<li><a class="smooth" href="team.html">Members</a></li>
-							<li class="signup"><a href="#projects">View Project</a></li>
-							<li class="smooth"><a href="./Idomalinks.html">Meetings</a></li>
-							<li class="smooth"><a href="./Idomalinks.html">Committees</a></li>
-							<li class="smooth"><a href="./Idomalinks.html">Links</a></li>
-							<li class="smooth"><a href="./Idomalinks.html">Minutes</a></li>
+							<li class="sign
+							up"><a href="#projects">View Project</a></li>
+							
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								  More
+								</a>
+								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown">
+								  <a class="dropdown-item smooth navis" href="#">Committee</a>
+								  <div class="dropdown-divider "></div>
+
+								  <a class="dropdown-item navis" href="./Links.html">Links</a>
+								  <div class="dropdown-divider "></div>
+								  <a class="dropdown-item smooth navis" href="./Minutes.html">Minutes</a>
+                                  <div class="dropdown-divider "></div>
+
+								  <a class="dropdown-item smooth navis" href="./Meetings.html">Meetings</a>
+								</div>
+							  </li>
 						</ul>
 					</div>
 				</nav>
