--- a/public/Idomalinks.html
+++ b/public/Idomalinks.html
@@ -66,9 +66,9 @@
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
-							<li><a class="smooth" href="#wrapper">Home</a></li>
+							<li><a class="smooth" href="index.html#wrapper">Home</a></li>
 							<li><a class="smooth" href="./Links.html">Links</a></li>
-							<li><a class="smooth" href="./index.html#projects">Projects</a></li>
+							<li><a class="smooth" href="index.html#projects">Projects</a></li>
 							<li><a class="smooth" href="team.html">Members</a></li>
 							<li class="sign
 							up"><a href="#projects">View Project</a></li>
@@ -84,15 +84,13 @@
 								  <a class="dropdown-item navis" href="./Links.html">Links</a>
 								  <div class="dropdown-divider "></div>
 								  <a class="dropdown-item smooth navis" href="./Minutes.html">Minutes</a>
-								  <div class="dropdown-divider "></div>
+                                  <div class="dropdown-divider "></div>
 
 								  <a class="dropdown-item smooth navis" href="./Meetings.html">Meetings</a>
 								</div>
-
 							  </li>
 						</ul>
 					</div>
-				</nav>iv>
 				</nav>
 				<!-- nav of the page end -->
 			</div>
