--- a/public/Links.html
+++ b/public/Links.html
@@ -66,7 +66,7 @@
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
-							<li><a class="smooth" href="#wrapper">Home</a></li>
+							<li><a class="smooth" href="index.html#wrapper">Home</a></li>
 							<li><a class="smooth" href="./Links.html">Links</a></li>
 							<li><a class="smooth" href="index.html#projects">Projects</a></li>
 							<li><a class="smooth" href="team.html">Members</a></li>
@@ -78,7 +78,7 @@
 								  More
 								</a>
 								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown">
-								  <a class="dropdown-item smooth navis" href="#">Committee</a>
+								  <a class="dropdown-item smooth navis" href="./Committees.html">Committee</a>
 								  <div class="dropdown-divider "></div>
 
 								  <a class="dropdown-item navis" href="./Links.html">Links</a>
