Links well updated

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -71,11 +71,11 @@
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
 							<li><a class="smooth" href="index.html#wrapper">Home</a></li>
-							<li><a class="smooth" href="./Links.html">Links</a></li>
-							<li><a class="smooth" href="index.html#projects">Projects</a></li>
+							<li><a class="smooth" href="./index.html#features">About</a></li>
+							<li><a class="smooth" href="index.html#projects">Gallery</a></li>
 							<li><a class="smooth" href="team.html">Members</a></li>
 							<li class="sign
-							up"><a href="#projects">View Project</a></li>
+							up"><a href="index.html#projects">Photo Gallery</a></li>
 							
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
