--- a/public/gallery.html
+++ b/public/gallery.html
@@ -74,8 +74,6 @@
 							<li><a class="smooth" href="./index.html#features">About</a></li>
 							<li><a class="smooth" href="index.html#projects">Gallery</a></li>
 							<li><a class="smooth" href="team.html">Members</a></li>
-							<li class="sign
-							up"><a href="index.html#projects">Photo Gallery</a></li>
 							
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -87,7 +85,7 @@
 
 								  <a class="dropdown-item navis" href="./Links.html">Links</a>
 								  <div class="dropdown-divider "></div>
-								  <a class="dropdown-item smooth navis" href="./Minutes.html">Minutes</a>
+								  <a class="dropdown-item smooth navis" href="./Minutes.html">Commerce, Travels & Leisure</a>
                                   <div class="dropdown-divider "></div>
 
 								  <a class="dropdown-item smooth navis" href="./Meetings.html">Meetings</a>
@@ -208,7 +206,7 @@
         document.querySelector('title').innerText = innerText = localStorage.getItem('pname')
         document.querySelector("#tittss").innerText = localStorage.getItem('pname')
         document.querySelector("#adress").innerText = localStorage.getItem('adress')
-
+		
         function chunckUrls(arr, val) {
             const urlChuncks = [];
             for (let i = 0; i < arr.length; i++) {
