--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,6 @@
 							<li><a class="smooth" href="./index.html#features">About</a></li>
 							<li><a class="smooth" href="index.html#projects">Gallery</a></li>
 							<li><a class="smooth" href="team.html">Members</a></li>
-							<li class="sign
-							up"><a href="index.html#projects">Photo Gallery</a></li>
 							
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -108,7 +106,7 @@
 						<div class="wow bounceIn" data-wow-delay="1.2s">
 							<h1><span class="color">Ↄfu</span>'K'Idoma<br></h1>
 							<span class="txt italic">The Strength of Idoma!</span>
-							<a href="#projects" class="btn-info white">View Projects</a>
+							<a href="#projects" class="btn-info white">Photo Gallery</a>
 						</div>
 					</div>
 				</div>
@@ -335,7 +333,7 @@
 		  }
 		}
 	</style>
-	<script src="./js/app.js">
+	<script src="./js/app.js">   
 
 	</script>
 
