--- a/public/team.html
+++ b/public/team.html
@@ -70,8 +70,6 @@
 							<li><a class="smooth" href="./index.html#features">About</a></li>
 							<li><a class="smooth" href="index.html#projects">Gallery</a></li>
 							<li><a class="smooth" href="team.html">Members</a></li>
-							<li class="sign
-							up"><a href="index.html#projects">Photo Gallery</a></li>
 							
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -83,7 +81,7 @@
 
 								  <a class="dropdown-item navis" href="./Links.html">Links</a>
 								  <div class="dropdown-divider "></div>
-								  <a class="dropdown-item smooth navis" href="./Minutes.html">Minutes</a>
+								  <a class="dropdown-item smooth navis" href="./Minutes.html">Commerce, Travels & Leisure</a>
                                   <div class="dropdown-divider "></div>
 
 								  <a class="dropdown-item smooth navis" href="./Meetings.html">Meetings</a>
@@ -368,6 +366,7 @@
 		    transform: translateY(-2000px);
 		  }
 		}
+
 	</style>
       <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
       <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
@@ -379,6 +378,6 @@
           const domContainer = document.querySelector('#bodys');
           ReactDOM.render(e(Welcome), domContainer);
       </script>
-    
+
 </body>
 </html>
