--- a/public/Meetings.html
+++ b/public/Meetings.html
@@ -70,9 +70,7 @@
 							<li><a class="smooth" href="./index.html#features">About</a></li>
 							<li><a class="smooth" href="index.html#projects">Gallery</a></li>
 							<li><a class="smooth" href="team.html">Members</a></li>
-							<li class="sign
-							up"><a href="index.html#projects">Photo Gallery</a></li>
-							
+						
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								  More
@@ -83,7 +81,7 @@
 
 								  <a class="dropdown-item navis" href="./Links.html">Links</a>
 								  <div class="dropdown-divider "></div>
-								  <a class="dropdown-item smooth navis" href="./Minutes.html">Minutes</a>
+								  <a class="dropdown-item smooth navis" href="./Minutes.html">Commerce, Travels & Leisure</a>
                                   <div class="dropdown-divider "></div>
 
 								  <a class="dropdown-item smooth navis" href="./Meetings.html">Meetings</a>
