--- a/public/team.html
+++ b/public/team.html
@@ -689,19 +689,19 @@
 
 
     <script>
-          firebase.initializeApp({
-    apiKey: "AIzaSyBPAyvwOHueuH3Evnf-CBg-Zfpw9nZnArc",
-    authDomain: "ofukidoma1-8a9d7.firebaseapp.com",
-    projectId: "ofukidoma1-8a9d7",
-    storageBucket: "ofukidoma1-8a9d7.appspot.com",
-    messagingSenderId: "626175553729",
-    appId: "1:626175553729:web:9aee24f452a303aa07e440",
-    measurementId: "G-5M67FT3NMG",
-  });
+        firebase.initializeApp({
+            apiKey: "AIzaSyCiPqw1vxihuDebpy4nWXH4HRJwFwj1qd0",
+            authDomain: "ofukidomawebsite.firebaseapp.com",
+            projectId: "ofukidomawebsite",
+            storageBucket: "ofukidomawebsite.appspot.com",
+            messagingSenderId: "1054884214251",
+            appId: "1:1054884214251:web:40e7107a540a33583bd5ae",
+            measurementId: "G-WEDXKL01C3"
+        });
 
-  
-  // Initialize Firebase
-  var db = firebase.firestore();
+
+        // Initialize Firebase
+        var db = firebase.firestore();
 
     </script>
 
@@ -709,7 +709,7 @@
 
 
 
-    <script  src="./assets/js/TeamCompiled.js"></script>
+    <script type="text/babel" src="./assets/js/Team.js"></script>
 
 </body>
 
