added loader and more

--- a/public/profile2.html
+++ b/public/profile2.html
@@ -251,7 +251,6 @@
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 
     <!-- Don't use this in production: -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
@@ -271,7 +270,7 @@
 
     </div>
 
-    <script type=text/babel src="./assets/js/Profile.js"></script>
+    <script abel src="./assets/js/ProfileCompiled.js"></script>
 </body>
 
 <!-- Mirrored from website154492.nicepage.io/Page-6.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 10 Feb 2022 20:45:44 GMT -->
