--- a/public/index.html
+++ b/public/index.html
@@ -199,11 +199,11 @@
 							<div class="test-slider text-center mar-bmd">
 								<!-- slide of the page -->
 								<div class="slide">
-									<img src="./images/md2.jpg" alt="image description" class="img-round">
+									<img src="https://firebasestorage.googleapis.com/v0/b/ofukidoma1-8a9d7.appspot.com/o/TEAM%2Foche.jpg?alt=media&token=095d1099-d8f0-462e-acf0-b8586c83cc47" alt="image description" class="img-round">
 									<div class="text">
-										<p>Anthony Aboki Okwa is a Fellow of the Nigerian Institute of Building (NIOB), and DG of C-STEMP Construction Skills Training and Empowerment Project Ltd/Gte.</p>
-										<span class="name"><strong>Builder OKWA Anthony  A.</strong> MD. C-STEMP  </span>
-										<button type="button" class="btn btn-danger">See More</button>
+										<p>He attended St. Barnards Primary School, Okpoga, Mt. St. Michaels Secondary School, Aliade and University of Calabar, in Cross River State where he had his Bachelor of Arts and Master of Arts Degrees.</p>
+										<span class="name"><strong>RTD. COMPTROLLER OKPE, SYLVESTER</strong>  </span>
+										<a href="./team.html">	<button type="button" class="btn btn-danger"> See More</button></a>
 									</div>
 								</div>
 								<div class="slide">
@@ -211,25 +211,10 @@
 									<div class="text">
 										<p>Anthony Aboki Okwa is a Fellow of the Nigerian Institute of Building (NIOB), and DG of C-STEMP Construction Skills Training and Empowerment Project Ltd/Gte.</p>
 										<span class="name"><strong>Builder OKWA Anthony  A.</strong> MD. C-STEMP  </span>
-										<button type="button" class="btn btn-danger">See More</button>
+										<a href="./team.html">	<button type="button" class="btn btn-danger"> See More</button></a>
 									</div>
 								</div>
-								<div class="slide">
-									<img src="./images/md2.jpg" alt="image description" class="img-round">
-									<div class="text">
-										<p>Anthony Aboki Okwa is a Fellow of the Nigerian Institute of Building (NIOB), and DG of C-STEMP Construction Skills Training and Empowerment Project Ltd/Gte.</p>
-										<span class="name"><strong>Builder OKWA Anthony  A.</strong> MD. C-STEMP  </span>
-										<button type="button" class="btn btn-danger">See More</button>
-									</div>
-								</div>
-								<div class="slide">
-									<img src="./images/md2.jpg" alt="image description" class="img-round">
-									<div class="text">
-										<p>Anthony Aboki Okwa is a Fellow of the Nigerian Institute of Building (NIOB), and DG of C-STEMP Construction Skills Training and Empowerment Project Ltd/Gte.</p>
-										<span class="name"><strong>Builder OKWA Anthony  A.</strong> MD. C-STEMP  </span>
-										<button type="button" class="btn btn-danger">See More</button>
-									</div>
-								</div>
+								
 								<!-- slide of the page end -->
 								<!-- slide of the page -->
 								
