--- a/public/excos.html
+++ b/public/excos.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="The Strength of Idoma!">
 	<meta name="keywords" content="Idoma Our Home">
 	<meta name="author" content="Joel Odufu">
-	<title>Committees </title>
+	<title>Excos </title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900%7cOpen+Sans:300,400,400i,600,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
 	<link rel="stylesheet" href="./css/project.css">
