added exco template

--- a/public/Links.html
+++ b/public/Links.html
@@ -77,25 +77,83 @@
 						<ul class="nav navbar-nav">
 							<li><a class="smooth" href="index.html#wrapper">Home</a></li>
 							<li><a class="smooth" href="./index.html#features">About</a></li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									Members
+								</a>
+								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown">
+									<a class="dropdown-item smooth navis" href="./excos.html">Exco Members</a>
+									<div class="dropdown-divider "></div>
+									<a class="dropdown-item smooth navis" href="./Committees.html">Committees</a>
+									<div class="dropdown-divider "></div>
+
+									<a class="dropdown-item smooth navis" href="./team.html">Members</a>
+									<div class="dropdown-divider "></div>
+
+								</div>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									Projects
+								</a>
+								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown" style="font-size: 1.1rem;">
+									<a class="dropdown-item smooth navis" href="./Committees.html">Community Development</a>
+									<div class="dropdown-divider "></div>
+
+									<a class="dropdown-item navis" href="./Links.html">Agro-Industrial Park</a>
+								</div>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									Publications
+								</a>
+								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown" style="font-size: 1.2rem;">
+									<a class="dropdown-item smooth navis" href="./Committees.html">Constitution</a>
+									<div class="dropdown-divider "></div>
+
+									<a class="dropdown-item navis" href="./Links.html"></a>
+								</div>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									Travel and Leisure
+								</a>
+								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown" style="font-size: 1.2rem;">
+									<a class="dropdown-item smooth navis" href="./Committees.html">Cultural Festivals</a><!-- Mis Halimat-->
+									<div class="dropdown-divider "></div>
+									<a class="dropdown-item navis" href="./Links.html">Hotels</a>
+									<div class="dropdown-divider "></div>
+
+									<a class="dropdown-item navis" href="./Links.html">Restaurants</a>
+									<div class="dropdown-divider "></div>
+
+									<a class="dropdown-item navis" href="./Links.html">Event Centres</a>
+									<div class="dropdown-divider "></div>
+
+									<a class="dropdown-item navis" href="./Links.html">Transport Services</a>
+
+								</div>
+							</li>
+
 							<li><a class="smooth" href="index.html#projects">Gallery</a></li>
-							<li><a class="smooth" href="team.html">Members</a></li>
+
 
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									More
+									Useful Links
 								</a>
-								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item smooth navis" href="./Committees.html">Committee</a>
+								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown" style="font-size: 1.2rem;">
 									<div class="dropdown-divider "></div>
 
-									<a class="dropdown-item navis" href="./Links.html">Links</a>
+									<a class="dropdown-item navis" href="./Links.html">Useful Links</a>
 									<div class="dropdown-divider "></div>
-									<a class="dropdown-item smooth navis" href="./Minutes.html">Commerce, Travels &
-										Leisure</a>
 									<div class="dropdown-divider "></div>
 
-									<a class="dropdown-item smooth navis" href="./Meetings.html">Meetings</a>
 								</div>
 							</li>
 						</ul>
