--- a/public/Committees.html
+++ b/public/Committees.html
@@ -42,8 +42,6 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="./images/fav/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
-
-
 </head>
 
 <body>
@@ -112,7 +110,7 @@
 								</a>
 								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown"
 									style="font-size: 1.2rem;">
-									<a class="dropdown-item smooth navis" href="./Committees.html">Constitution</a>
+									<a class="dropdown-item smooth navis" href="./poblications.html">Constitution</a>
 									<div class="dropdown-divider "></div>
 
 									<a class="dropdown-item navis" href="./Links.html"></a>
