--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
 									Publications
 								</a>
 								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown" style="font-size: 1.2rem;">
-									<a class="dropdown-item smooth navis" href="./Committees.html">Constitution</a>
+									<a class="dropdown-item smooth navis" href="./poblications.html">Constitution</a>
 									<div class="dropdown-divider "></div>
 
 									<a class="dropdown-item navis" href="./Links.html"></a>
