--- a/public/excos.html
+++ b/public/excos.html
@@ -144,13 +144,13 @@
 								</a>
 								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown"
 									style="font-size: 1.2rem;">
-									<a class="dropdown-item smooth navis" href="./Committees.html">Cultural
+									<a class="dropdown-item smooth navis" href="./culturalFestival.html">Cultural
 										Festivals</a><!-- Mis Halimat-->
 									<div class="dropdown-divider "></div>
-									<a class="dropdown-item navis" href="./Links.html">Hotels</a>
+									<a class="dropdown-item navis" href="./hotels.html">Hotels</a>
 									<div class="dropdown-divider "></div>
 
-									<a class="dropdown-item navis" href="./Links.html">Restaurants</a>
+									<a class="dropdown-item navis" href="./restaurants.html">Restaurants</a>
 									<div class="dropdown-divider "></div>
 
 									<a class="dropdown-item navis" href="./Links.html">Event Centres</a>
