--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
 									Travel and Leisure
 								</a>
 								<div class="dropdown-menu smooth" aria-labelledby="navbarDropdown" style="font-size: 1.2rem;">
-									<a class="dropdown-item smooth navis" href="./Committees.html">Cultural Festivals</a><!-- Mis Halimat-->
+									<a class="dropdown-item smooth navis" href="./culturalFestival.html">Cultural Festivals</a><!-- Mis Halimat-->
 									<div class="dropdown-divider "></div>
 									<a class="dropdown-item navis" href="./Links.html">Hotels</a>
 									<div class="dropdown-divider "></div>
